--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  curved_navigation_bar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
