--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
