--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,34 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # User Interface
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
   flutter_switch: ^0.3.2
 
+  url_launcher: ^6.0.9
+
+  # API
+  chopper: ^4.0.0
+  provider: ^5.0.0
+
+  # JSON
+  json_annotation: ^4.0.0
+
+  # Log
+  logging: ^1.0.0
+  intl: ^0.17.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # API
+  build_runner: ^2.0.0
+  chopper_generator: ^4.0.0
+
+  # JSON
+  json_serializable: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
