--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
   flutter_switch: ^0.3.2
+  category_picker: ^1.0.1
 
   url_launcher: ^6.0.9
 
