--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-# Secret files
-.env
-
 # Created by https://www.toptal.com/developers/gitignore/api/android,androidstudio,xcode,visualstudiocode,dart,flutter
 # Edit at https://www.toptal.com/developers/gitignore?templates=android,androidstudio,xcode,visualstudiocode,dart,flutter
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
 
 ### Android ###
 # Built application files
