--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - posters/
+    - posters/api/
+    - posters/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
